Final triangle fix + optimize for web

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+				Move your mouse around the triangle.
 	    </footer>
 	</body>
 </html>
